# django_aiogram_template

./: .env.temp  Makefile  README.md  pyproject.toml
core/: settings.py
tg_bot/: __init__.py  config.py
tg_bot/handlers/: __init__.py
tg_bot/handlers/users/: auth.py
tg_bot/management/commands/: start_polling.py
