[tool.poetry]
name = "django-aiogram-template"
version = "0.1.0"
description = ""
authors = ["rashideveloper <bubbless7456@gmail.com>"]
readme = "README.md"
packages = [{include = "django_aiogram_template"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
